[gd_scene load_steps=5 format=3 uid="uid://b8uvuwlj4nxue"]

[ext_resource type="Script" uid="uid://cmt5dr2j7jf42" path="res://scripts/monster_base.gd" id="1_nccwj"]
[ext_resource type="Texture2D" uid="uid://ugb0nfpjkrqs" path="res://assets/sprites/healthbarProgress.png" id="8_vqimq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdt3w"]
radius = 9.0
height = 138.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7b6q"]
size = Vector2(70, 19)

[node name="MonsterBase" type="CharacterBody2D"]
script = ExtResource("1_nccwj")

[node name="MonsterArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="ChaseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xdt3w")
debug_color = Color(0.860794, 0.334719, 0.365255, 0.42)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_k7b6q")
debug_color = Color(0.282953, 0.537555, 0.875954, 0.42)

[node name="AttackTimer" type="Timer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(9, -15)
rotation = 1.5708
collision_layer = 0
collision_mask = 4

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -32.0
offset_top = -41.0
offset_right = 32.0
offset_bottom = -1.0
value = 100.0
texture_progress = ExtResource("8_vqimq")
metadata/_edit_use_anchors_ = true
